5gcicd_tv/cfg/deploy_dashboard_tv_5gcicd_all.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-tv-5gcicd-serv
  namespace: tv-5gcicd
  labels:
    app: dashboard-tv-5gcicd
spec:
  type: NodePort
  ports:
  - name: dash
    port: 3030
    targetPort: 3030
  selector:
    app: dashboard-tv-5gcicd

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: ${HTTP_SERVER_STATEFUL_NAME}
  labels:
    app: dashboard-tv-5gcicd
  namespace: tv-5gcicd
spec:
  serviceName: dashboard-tv-5gcicd-serv
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard-tv-5gcicd
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: dashing-dashboards-vol
          persistentVolumeClaim:
            claimName: dashing-dashboards
        - name: dashing-jobs-vol
          persistentVolumeClaim:
            claimName: dashing-jobs
        - name: dashing-public-vol
          persistentVolumeClaim:
            claimName: dashing-public
        - name: dashing-assets-vol
          persistentVolumeClaim:
            claimName: dashing-assets
        - name: dashing-widgets-vol
          persistentVolumeClaim:
            claimName: dashing-widgets
        - name: dashing-config-vol
          persistentVolumeClaim:
            claimName: dashing-config
        - name: gerritpk-adp
          secret:
            secretName: "gerritpk-adp"
        - name: userpwd-adp
          secret:
            secretName: "userpwd-adp"
      imagePullSecrets:
        - name: userpwd-adp
      containers:
        - name: dashboard-tv-5gcicd
          image: frvi/dashing:latest
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: "/dashboards/"
            name: dashing-dashboards-vol
          - mountPath: "/jobs/"
            name: dashing-jobs-vol
          - mountPath: "/public/"
            name: dashing-public-vol
          - mountPath: "/assets/"
            name: dashing-assets-vol
          - mountPath: "/widgets/"
            name: dashing-widgets-vol
          - mountPath: "/config/"
            name: dashing-config-vol
          - mountPath: /root/.ssh/adp
            name: gerritpk-adp
            readOnly: true
          - mountPath: /root/.docker/adp
            name: userpwd-adp
            readOnly: true
          ports:
          - containerPort: 3030
            name: dash-port
